--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-git+https://github.com/adityacheats/downloader@master
+git+https://github.com/devil749/downloader@master
 pyrogram
 TgCrypto
 py-tgcalls
